Fix overflow issue on images when width is over 1600px

--- a/src/styles/components/_images.scss
+++ b/src/styles/components/_images.scss
@@ -31,3 +31,24 @@
     }
   }
 }
+
+@media screen and (min-width: 1600px){
+  .container-images {
+    overflow: visible;
+  }
+}
+
+@media screen and (min-height: 1200px) {
+  .container-images {
+    height: 40%;
+    img {
+      max-width: 50%;
+    }
+    .gbag1 {
+      margin-right: -16rem;
+    }
+    .gbag2 {
+      margin-left: -8rem;
+    }
+  }
+}
